<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name" translatable="false">Simple Counter</string>
    <string name="app_name_short">Counter</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>

    <!-- Menu -->
    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_add">Add counter</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">About</string>

    <!-- Dialogs -->
    <string name="dialog_add_title">Add new counter</string>
    <string name="dialog_edit_title">Edit counter</string>
    <string name="dialog_delete_title">Do you really want to delete this counter?</string>
    <string name="dialog_edit_name">Title:</string>
    <string name="dialog_edit_value">Value:</string>
    <string name="dialog_button_add">Add</string>
    <string name="dialog_button_apply">Apply</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_close">Close</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_screen">Screen</string>
    <string name="settings_keep_on_title">Keep screen on</string>
    <string name="settings_keep_on_summary">Keep screen on while app is active</string>
    <string name="settings_controls">Controls</string>
    <string name="settings_sounds_title">Turn on sounds</string>
    <string name="settings_sounds_summary">Play sounds</string>
    <string name="settings_vibration_title">Turn on vibration</string>
    <string name="settings_vibration_summary">Vibrate on changes</string>
    <string name="settings_hard_title">Use hardware buttons</string>
    <string name="settings_hard_summary">Change counter value using hardware buttons</string>
    <string name="settings_other">Other</string>
    <string name="settings_wipe_title">Remove all counters</string>
    <string name="settings_wipe_confirmation">Are you sure want to remove all counters?</string>
    <string name="settings_wipe_confirmation_yes">Remove all</string>
    <string name="settings_version_title">Version</string>

    <!-- Other stuff -->
    <string name="toast_wipe_success">All counters have been removed.</string>
    <string name="toast_remove_success_1">Counter</string>
    <string name="toast_remove_success_2">has been removed.</string>
    <string name="toast_no_name_message">Please, input the name.</string>
    <string name="default_counter_name">First counter</string>
    <string name="unknown">Unknown</string>

    <!-- Info dialog -->
    <string name="info" translatable="false"><![CDATA[
        <h1>About</h1>
        <p>Simple Counter is a <a href="http://en.wikipedia.org/wiki/Tally_counter">tally counter</a> for Android.
        It makes counting easier. You can have multiple counters with their own names and values.
        Values can be changed using volume buttons.</p>
        <p>This is an open source application. Source code is hosted on GitHub at
        <a href="https://github.com/Tsukanov/Simple-Counter/">https://github.com/Tsukanov/Simple-Counter/</a>.</p>
        <p>It is my first Android application. The goal was to make something useful (at least for myself)
        and easy to build. Feel free to submit bug reports
        <a href="https://github.com/Tsukanov/Simple-Counter/issues">on GitHub</a>.</p>
        <p>I hope you\'ll find this app useful. If you have some free time, please, rate this app in
        <a href="https://play.google.com/store/apps/details?id=me.tsukanov.counter">Play Store</a>. Thanks!</p>

        <h2>Contributing</h2>
        <p>Feel free to make improvements and create pull requests. If you want to help with translation go to project\'s
        <a href="http://crowdin.net/project/simple-counter">page on Crowdin</a>.</p>
        <p>Thanks to all contributors who help me work on this small and interesting project.</p>

        <h2>Legal</h2>
        <p>Created by <a href="http://tsukanov.me/">Roman Tsukanov</a>.
        Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.
        <br />Unless required by applicable law or agreed to in writing, software distributed under the License is
        distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions andlimitations under the License.</p>
    ]]></string>

</resources>
